# Spectr

./: .gitignore  FUNDING.yml  LICENSE  README.md  custom_strategy.py  default.tcss  metrics.py  multi_symbol_screen.py  pyproject.toml  refactor.md  requirements.txt  review.txt  spectr.py  utils.py
fetch/: alpaca.py  data_interface.py  fmp.py  robinhood.py
src/spectr/: AGENTS.md  __init__.py  agent.py  backtest.py  broker_tools.py  cache.py  cli.py  custom_scanner.py  custom_strategy.py  daemon_thread_pool.py  default.tcss  exceptions.py  metrics.py  news.py  plot_lock.py  plotext_fix.py  serve.toml  spectr.py  utils.py
src/spectr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/spectr/fetch/: alpaca.py  broker_interface.py  data_interface.py  fmp.py  robinhood.py
src/spectr/res/: spectr_logo_side_inverted_ascii.txt  spectr_logo_simple_ascii.txt
src/spectr/scanners/: __init__.py  custom_scanner.py  scanner_interface.py
src/spectr/strategies/: __init__.py  awesome_oscillator.py  custom_strategy.py  dual_thrust.py  macd_oscillator.py  metrics.py  shooting_star.py  trading_strategy.py
src/spectr/views/: backtest_error_screen.py  backtest_graph_view.py  backtest_input_dialog.py  backtest_loading_screen.py  backtest_result_screen.py  equity_curve_view.py  graph_view.py  log_overlay.py  macd_view.py  markdown_modal.py  onboarding_app.py  onboarding_dialog.py  order_dialog.py  portfolio_screen.py  setup_app.py  setup_confirm_dialog.py  setup_dialog.py  splash_screen.py  strategy_screen.py  symbol_view.py  ticker_input_dialog.py  top_overlay.py  trades_screen.py  volume_view.py
tests/: test_afterhours_reason.py  test_afterhours_toggle.py  test_alpaca_order_tif.py  test_alpaca_quote.py  test_alpaca_symbol.py  test_attach_order_reason.py  test_backtest_cache_usage.py  test_backtest_end_value_integration.py  test_backtest_fmp_api_calls.py  test_backtest_fmp_live.py  test_backtest_full_duration_calc.py  test_backtest_input_dialog.py  test_backtest_run.py  test_backtest_timestamp_alignment.py  test_broker_outputs.py  test_broker_tools.py  test_broker_tools_afterhours.py  test_cache_migration.py  test_cached_auth.py  test_clear_cached_data.py  test_detect_signal_error.py  test_end_value_calc.py  test_get_order_sides.py  test_has_pending_order.py  test_has_pending_orders.py  test_holdings_ask_value.py  test_last_backtest_cache.py  test_log_overlay.py  test_order_status_persistence.py  test_overlay_screens.py  test_pending_order.py  test_portfolio_ctrl_a.py  test_process_updates_pending.py  test_remove_symbol_action.py  test_set_strategy.py  test_setup_app.py  test_setup_dialog.py  test_signal_audio.py  test_spectavi_trailing_stop.py  test_status_bar.py  (+10 more)
views/: graph_view.py  macd_view.py  multi_ticker_input_dialog.py  ticker_input_dialog.py  top_overlay.py
