[build-system]
requires = ["setuptools>=70", "wheel"]  # build deps
build-backend = "setuptools.build_meta"

[project]
name            = "spectr"                     # pip install spectr
version         = "0.1.0"                      # bump with each release
description     = "Live Backtrader + Textual dashboard for multi-symbol monitoring"
readme          = "README.md"
license         = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
  {name = "Aaron McClintock"}
]

dependencies = [
  "backtrader>=1.9.78.123",
  "textual[syntax]>=0.59",
  "pandas>=2.2",
  "requests>=2.32",
  "tzlocal>=5.0",
  "pygame>=2.5",
  "sounddevice>=0.4",
  "soundfile>=0.12",
  "plotext>=5.2",
  "ta>=0.11",
  "openai>=1.0",
  "python-dotenv>=1.0",
  "robin_stocks>=2.1",
  "pyperclip>=1.8",
]

[project.urls]
Source   = "https://github.com/your-handle/spectr"
Issues   = "https://github.com/your-handle/spectr/issues"
Docs     = "https://spectr.readthedocs.io"

[project.scripts]
spectr = "spectr.cli:main"   # $ spectr ↵ launches the UI
